--- a/target-string-kamil.ipynb
+++ b/target-string-kamil.ipynb
@@ -9,9 +9,9 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Parameters\n",
-    "target_string = '1101010101'\n",
-    "string_length = len(target_string)\n",
+    "# Parameters for GA\n",
+    "goal_string = '1101010101'\n",
+    "string_length = len(goal_string)\n",
     "population_size = 100\n",
     "crossover_rate = 0.8\n",
     "mutation_rate = 0.8 #with 0.01 it reached the target value almost immediatly \n",
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize population\n",
+    "# Initializing  population\n",
     "population = [''.join(random.choice('01') for _ in range(string_length)) for _ in range(population_size)]\n"
    ]
   },
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fitness(individual, target_string):\n",
-    "    return sum(bit == target_bit for bit, target_bit in zip(individual, target_string))\n"
+    "def fitness(individual, goal_string):\n",
+    "    return sum(bit == goal_bit for bit, goal_bit in zip(individual, goal_string))\n"
    ]
   },
   {
@@ -44,15 +44,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def roulette_wheel_selection(population, fitness_values):\n",
-    "    total_fitness = sum(fitness_values)\n",
-    "    selection_probabilities = [fitness / total_fitness for fitness in fitness_values]\n",
+    "def russian_roulette_wheel_selection(population, fitness_values):\n",
+    "    fitness_addedup = sum(fitness_values)\n",
+    "    selection_likelyhood = [fitness / fitness_addedup for fitness in fitness_values]\n",
     "\n",
-    "    # Select individuals using Roulette Wheel Selection\n",
-    "    selected_indices = random.choices(range(len(population)), weights=selection_probabilities, k=len(population))\n",
+    "    # randomly select the strings but weigh them more with size\n",
+    "    selected_participants = random.choices(range(len(population)), weights=selection_likelyhood, k=len(population))\n",
     "\n",
-    "    # Return the selected individuals\n",
-    "    selected_population = [population[index] for index in selected_indices]\n",
+    "    # Return the selected \n",
+    "    selected_population = [population[index] for index in selected_participants]\n",
     "    return selected_population"
    ]
   },
@@ -76,14 +76,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crossover(parent1, parent2):\n",
+    "def crossover(parent_one, parent_two):\n",
     "    if random.random() < crossover_rate:\n",
-    "        crossover_point = random.randint(1, len(parent1) - 1)\n",
-    "        child1 = parent1[:crossover_point] + parent2[crossover_point:]\n",
-    "        child2 = parent2[:crossover_point] + parent1[crossover_point:]\n",
-    "        return child1, child2\n",
+    "        crossover_index_point = random.randint(1, len(parent_one) - 1)\n",
+    "        child_one = parent_one[:crossover_index_point] + parent_two[crossover_index_point:]\n",
+    "        child_two = parent_two[:crossover_index_point] + parent_one[crossover_index_point:]\n",
+    "        return child_one, child_two\n",
     "    else:\n",
-    "        return parent1, parent2\n"
+    "        return parent_one, parent_two\n"
    ]
   },
   {
@@ -97,22 +97,22 @@
     "\n",
     "for generation in range(generations):\n",
     "    # Calculate fitness for each individual\n",
-    "    fitness_values = [fitness(individual,target_string) for individual in population]\n",
+    "    fitness_values = [fitness(individual,goal_string) for individual in population]\n",
     "\n",
     "    # Calculate best fitness\n",
     "    best_fitness_list.append(max(fitness_values))\n",
     "    \n",
-    "    # Select parents based on fitness values using Roulette Wheel Selection\n",
-    "    selected_population = roulette_wheel_selection(population, fitness_values) \n",
+    "    # Select parents based on fitness scores from using Roulette Wheel Selection\n",
+    "    selected_population = russian_roulette_wheel_selection(population, fitness_values) \n",
     "\n",
-    "    # Create next generation\n",
+    "    # Create the  next generation\n",
     "    new_population = []\n",
     "    for i in range(0, len(selected_population), 2):\n",
-    "        parent1, parent2 = selected_population[i], selected_population[i+1]\n",
-    "        child1, child2 = crossover(parent1, parent2)\n",
-    "        child1 = mutate(child1)\n",
-    "        child2 = mutate(child2)\n",
-    "        new_population.extend([child1, child2])\n",
+    "        parent_one, parent_two = selected_population[i], selected_population[i+1]\n",
+    "        child_one, child_two = crossover(parent_one, parent_two)\n",
+    "        child_one = mutate(child_one)\n",
+    "        child_two = mutate(child_two)\n",
+    "        new_population.extend([child_one, child_two])\n",
     "\n",
     "    population = new_population\n"
    ]
