--- a/final_final_version_notebook.ipynb
+++ b/final_final_version_notebook.ipynb
@@ -132,11 +132,11 @@
    "source": [
     "# parameters for genetic algorithm\n",
     "max_bin_capacity = 1000\n",
-    "size_of_population = 5\n",
-    "mutation_rate = 0.9\n",
-    "crossover_rate = 0.8\n",
-    "elitism_rate = 0.01\n",
-    "number_of_generations = 300\n",
+    "size_of_population = 100\n",
+    "mutation_rate = 0.05\n",
+    "crossover_rate = 0.7\n",
+    "elitism_rate = 0.09\n",
+    "number_of_generations = 500\n",
     "bpp_list = [bpp1, bpp2, bpp3, bpp4, bpp5]"
    ]
   },
@@ -161,10 +161,6 @@
     "            number_of_bins += 1\n",
     "            # here we bring back the current_capacity_of_bin to the size of the current item\n",
     "            current_capacity_of_bin = item\n",
-    "\n",
-    "    # If there are any remaining items, create a new bin for them\n",
-    "    if current_capacity_of_bin > 0:\n",
-    "        number_of_bins += 1\n",
     "\n",
     "    return number_of_bins\n"
    ]
@@ -194,9 +190,9 @@
     "def crossover(parent_one, parent_two):\n",
     "    if random.random() < crossover_rate:\n",
     "        crossover_index_point = random.randint(1, len(parent_one) - 1)\n",
-    "        child_one = parent_one[:crossover_index_point] + parent_two[crossover_index_point:]\n",
-    "        child_two = parent_two[:crossover_index_point] + parent_one[crossover_index_point:]\n",
-    "        return child_one, child_two\n",
+    "        child1 = parent_one[:crossover_index_point] + parent_two[crossover_index_point:]\n",
+    "        child2 = parent_two[:crossover_index_point] + parent_one[crossover_index_point:]\n",
+    "        return child1, child2\n",
     "    else:\n",
     "        return parent_one, parent_two"
    ]
@@ -227,9 +223,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def elitism(population, fitness_scores, elitism_rate):\n",
+    "def elitism(population, fitness_values, elitism_rate):\n",
     "    number_of_elite_solutions = int(len(population) * elitism_rate)\n",
-    "    elites_selected = sorted(range(len(fitness_scores)), key=lambda i: fitness_scores[i], reverse=True)[:number_of_elite_solutions]\n",
+    "    elites_selected = sorted(range(len(fitness_values)), key=lambda i: fitness_values[i], reverse=True)[:number_of_elite_solutions]\n",
     "    return [population[i] for i in elites_selected]"
    ]
   },
@@ -249,28 +245,30 @@
     "        population.append(shuffled_weights)\n",
     "\n",
     "    # best_solution = None\n",
-    "    best_fitness = 0\n",
-    "    number_of_bins_list = []  # List used for storing best fitness values for each generation\n",
-    "\n",
+    "    # best_fitness = 0\n",
+    "    # number_of_bins_list = []  # List used for storing best fitness values for each generation\n",
+    "    best_solutions = []\n",
+    "    \n",
+    "    # Initialize best_fitness as a large integer\n",
+    "    best_fitness = float('inf')\n",
+    "    \n",
     "    # Evolutionion loop\n",
     "    for generation in range(number_of_generations):\n",
     "        # Evaluate fitness of each solution\n",
-    "        fitness_scores = []\n",
+    "        fitness_values = []\n",
+    "        best_num_bins = float('inf')\n",
+    "        \n",
     "        for solution in population:\n",
-    "            fitness = fitness_function(solution, max_bin_capacity)\n",
-    "            fitness_scores.append(fitness)\n",
-    "            # number_of_bins_values.append(number_of_binss)\n",
-    "        fitness_scores = [fitness_function(solution, max_bin_capacity) for solution in population]\n",
-    "\n",
-    "        # index_of_best_solution = fitness_scores.index(max(fitness_scores))\n",
-    "        current_best_fitness = max(fitness_scores)\n",
-    "\n",
-    "        if current_best_fitness > best_fitness:\n",
-    "            # best_solution = population[index_of_best_solution]\n",
-    "            best_fitness = current_best_fitness\n",
-    "\n",
+    "            num_bins = fitness_function(solution, max_bin_capacity)\n",
+    "            fitness_values.append(num_bins)\n",
+    "           \n",
+    "       \n",
+    "            if num_bins < best_num_bins:\n",
+    "                best_num_bins = num_bins\n",
+    "            \n",
+    "        best_solutions.append(best_num_bins)      \n",
     "        # Apply elitism so that we select the best solutions and keep them\n",
-    "        elites_selected = elitism(population, fitness_scores, elitism_rate)\n",
+    "        elites_selected = elitism(population, fitness_values, elitism_rate)\n",
     "\n",
     "        # Select parents for crossover while exlcuding the already selected elite ones\n",
     "        winning_parents = fittest_solution_tournament_selection(\n",
@@ -280,15 +278,14 @@
     "        offspring = []\n",
     "        for i in range(0, len(winning_parents), 2):\n",
     "            parent_one, parent_two = winning_parents[i], winning_parents[i + 1]\n",
-    "            child_one, child_two = crossover(parent_one, parent_two)\n",
-    "            child_one = mutate(child_one)\n",
-    "            child_two = mutate(child_two)\n",
-    "            offspring.extend([child_one, child_two])\n",
+    "            child1, child2 = crossover(parent_one, parent_two)\n",
+    "            child1 = mutate(child1)\n",
+    "            child2 = mutate(child2)\n",
+    "            offspring.extend([child1, child2])\n",
     "            population = elites_selected + offspring\n",
-    "            number_of_bins = sum(fitness_scores)\n",
-    "            # append fitness to list\n",
-    "            number_of_bins_list.append(number_of_bins)\n",
-    "    return number_of_bins_list"
+    "           \n",
+    "           \n",
+    "    return best_solutions"
    ]
   },
   {
@@ -299,12 +296,12 @@
    "outputs": [],
    "source": [
     "#Print to a file\n",
-    "def write_csv_file(number_of_bins_list,idx):\n",
+    "def write_csv_file(best_solutions,idx):\n",
     "    file_name = f'results/fitness_bin_packing_bpp{idx + 1}.csv'\n",
     "    with open(file_name, 'w') as file:\n",
     "        file.write(\"Generation,Number of Bins\\n\")\n",
-    "        for gen, number_of_bins in enumerate(number_of_bins_list):\n",
-    "            file.write(f\"{gen + 1},{number_of_bins}\\n\")"
+    "        for gen, solution in enumerate(best_solutions):\n",
+    "            file.write(f\"{gen + 1},{solution}\\n\")"
    ]
   },
   {
@@ -315,10 +312,10 @@
    "outputs": [],
    "source": [
     "# used for plotting the data, we also have csv's printed\n",
-    "def plot_csv_data(number_of_bins_list, idx):\n",
-    "    generations = list(range(1, len(number_of_bins_list) + 1))\n",
+    "def plot_csv_data(best_solutions, idx):\n",
+    "    generations = list(range(1, len(best_solutions) + 1))\n",
     "    \n",
-    "    plt.plot(generations, number_of_bins_list, marker='.', linestyle='-')\n",
+    "    plt.plot(generations, best_solutions, marker='.', linestyle='-')\n",
     "    plt.title(f'Fitness: Bin Packing BPP{idx + 1}')\n",
     "    plt.xlabel('Generation')\n",
     "    plt.ylabel('Number of Bins')\n",
@@ -445,16 +442,16 @@
     "# Run the genetic algorithm for bin packing\n",
     "for idx,items in enumerate(bpp_list):\n",
     "    items = items['item'].tolist()\n",
-    "    number_of_bins_list = bin_packing_genetic_algorithm(items, max_bin_capacity, size_of_population, number_of_generations)\n",
-    "    write_csv_file(number_of_bins_list,idx)\n",
+    "    best_solutions = bin_packing_genetic_algorithm(items, max_bin_capacity, size_of_population, number_of_generations)\n",
+    "    write_csv_file(best_solutions,idx)\n",
     "\n",
     "#print some values that will be used for debugging and checking scores\n",
-    "    print(f\"bpp{idx+1}, {len(number_of_bins_list)}, {number_of_bins_list}\")\n",
-    "    print(min(number_of_bins_list))\n",
+    "    print(f\"bpp{idx+1}, {len(best_solutions)}, {best_solutions}\")\n",
+    "    print(min(best_solutions))\n",
     "    print( \" : min bins is the best solution we can achieve\")\n",
-    "    print(statistics.mean(number_of_bins_list))\n",
+    "    print(statistics.mean(best_solutions))\n",
     "    print(\" : average number of bins\")\n",
-    "    plot_csv_data(number_of_bins_list, idx)"
+    "    plot_csv_data(best_solutions, idx)"
    ]
   }
  ],
@@ -474,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
